# lecture27

./: README.md  lecture.cabal  lecture26.cabal  stack.yaml
src/: LabRecDataTypes.hs  Lecture.hs  Lecture26.hs  OverloadedList.hs
