name:                lecture26
version:             2.0.0.0
homepage:            https://github.com/fpclass/lecture26#readme
author:              Michael B. Gale
maintainer:          m.gale@warwick.ac.uk
copyright:           Copyright 2019 Michael B. Gale
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lecture26, OverloadedList
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  default-extensions:

source-repository head
  type:     git
  location: https://github.com/fpclass/lecture26
